<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".QuizMainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/questionNo1"
                style="@style/questionAndAnswers"/>

            <EditText
                android:id="@+id/edit1_MountainName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/MountainHint"
                android:inputType="textCapWords"
                android:maxLength="20"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/questionNo2"
                style="@style/questionAndAnswers"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/radio1_1861"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1861"/>
                <RadioButton
                    android:id="@+id/radio2_1865"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1865"/>
                <RadioButton
                    android:id="@+id/radio3_1939"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1939"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/questionNo3"
                style="@style/questionAndAnswers"/>

            <CheckBox
                android:id="@+id/checkbox1_Singapore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerSingapore" />

            <CheckBox
                android:id="@+id/checkbox2_Hongkong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerHongkong" />

            <CheckBox
                android:id="@+id/checkbox3_Denmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerDenmark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/questionNo4"
                style="@style/questionAndAnswers"/>

            <EditText
                android:id="@+id/edit4_ReferenceBook"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/BookHint"
                android:inputType="textCapWords"
                android:maxLength="20"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/questionNo5"
                style="@style/questionAndAnswers"/>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <RadioButton
                android:id="@+id/radio1_FrancesMcDormand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerFrancesMcDormand"/>
            <RadioButton
                android:id="@+id/radio2_KatharineHepburn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerKatharineHepburn"/>
            <RadioButton
                android:id="@+id/radio3_MerylStreep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerMerylStreep"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/questionNo6"
                style="@style/questionAndAnswers"/>

            <CheckBox
                android:id="@+id/checkbox_Blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerBlue" />

            <CheckBox
                android:id="@+id/checkbox_Black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerBlack" />

            <CheckBox
                android:id="@+id/checkbox_Yellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerYellow" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
               style="@style/lastButton"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>